[metadata]
name = pyquet
version = 0.0.3
author = Ricardo Mugica
author_email = rmugicag@gmail.com
description = Text comparator UI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rmugicag/pyquet
project_urls = 
	Bug Tracker = https://github.com/rmugicag/pyquet/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6
install_requires = 
	pandas
	pyarrow

[options.packages.find]
where = src

